[metadata]
name = pyphonebot-core
version = 0.0.1
description = 
long_description = file: README.md
author = Yoonyoung Cho, Maximilian Schommer
author_email = jchocholate@gmail.com
keywords = robotics
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
package_dir =
    = src
packages = find_namespace:
include_package_data=True
python_requires = >=3.6
setup_requires =
    setuptools >= 41.2.0
install_requires =
    numpy
    networkx

[options.packages.find]
where = src
include = phonebot.*
